welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:11: error: value && is not a member of Unit
	if (posfinale() && (getDirection() == Direction.EST) ) {
                        ^SnakeBuggle:17: error: value && is not a member of Unit
		if ((posfinale()) && (getDirection() == Direction.OUEST) ) {
                                  ^SnakeBuggle:28: error: value unary_! is not a member of Unit
	while (!posfinale) {
               ^